[package]

name = "lettre_email"
version = "0.9.1" # remember to update html_root_url
description = "Email builder"
readme = "README.md"
homepage = "http://lettre.at"
repository = "https://github.com/lettre/lettre"
license = "MIT"
authors = ["Alexis Mousset <contact@amousset.me>"]
categories = ["email"]
keywords = ["email", "mailer"]
edition = "2018"

[badges]
travis-ci = { repository = "lettre/lettre_email" }
appveyor = { repository = "lettre/lettre_email" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "lettre/lettre_email" }
is-it-maintained-open-issues = { repository = "lettre/lettre_email" }

[dev-dependencies]
lettre = { version = "^0.9", path = "../lettre", features = ["smtp-transport"] }
glob = "0.3"

[dependencies]
# email = "0.0.20"
# email = {git = "https://github.com/niax/rust-email"}
email = {git = "https://github.com/juga0/rust-email", branch = 'encrypted'}
# mime = "^0.3"
mime = {git = "https://github.com/juga0/mime", branch = 'encrypted'}
time = "^0.1"
uuid = { version = "^0.7", features = ["v4"] }
lettre = { version = "^0.9", path = "../lettre", default-features = false }
base64 = "^0.10"

# [patch.crates-io]
# # email = { path = '../lettre/lettre_email', branch = 'encrypted' }
# email = { path = '../../rust-email', branch = 'encrypted' }

# [patch.'https://github.com/niax/rust-email']
# email = { path = '../../rust-email', branch = 'encrypted' }

